<resources>
    <string name="app_name">DocPlant</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="title_login_page">Welcome to the DocPlant</string>
    <string name="title_signup_page">Please fill in your data</string>
    <string name="password">Password</string>
    <string name="copyright">© 2022 DocPlant</string>
    <string name="message_login_page">Please login</string>
    <string name="have">Already have an account?</string>
    <string name="login">Login</string>
    <string name="dont">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="setting">Settings</string>
    <string name="scan">Scan</string>
    <string name="language_setting">Language Setting</string>
    <string name="upload_pict">Upload picture for scan</string>
    <string name="select_image">Select image from</string>
    <string name="select_from_camera">Camera</string>
    <string name="select_from_gallery">Gallery</string>
    <string name="upload_img">Upload Image</string>
    <string name="login_success">Login Success</string>
    <string name="login_err">Wrong email or password!</string>
    <string name="register_success">Register success, please login!</string>
    <string name="logo">Logo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_image">Add Image</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="logout">Logout</string>
    <string name="logout_dialog_title">Logout</string>
    <string name="logout_dialog_message">Are you sure want to logout?</string>
    <string name="logout_message_success">Logged out successfully</string>
    <string name="cancel">Cancel</string>
    <string name="scan_plant_disease">Scan plant disease</string>
    <string name="start_detect_plant_disease">Start detect plant disease!</string>
    <string name="last_search">Last search</string>
    <string name="last_search_plant_disease">Last search plant disease!</string>
    <string name="change_language_and_logout"><![CDATA[Change language & logout]]></string>
    <string name="welcome_to">Welcome to</string>
    <string name="result_diseases">Result diseases</string>
    <string name="diseases_title">Diseases:</string>
    <string name="example_diseases">Example diseases</string>
    <string name="description_title">Description:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse felis ipsum, egestas eu nisi eu, pretium aliquet turpis. Pellentesque lacinia ipsum elit, at venenatis enim fermentum ut. Etiam varius consequat augue sit amet ultrices. Duis et metus eget risus tristique bibendum vitae sed nisl. Suspendisse ultricies blandit rutrum. Nam viverra urna eget mi porttitor, ac dictum augue facilisis. Nulla vitae nunc id nulla tincidunt malesuada sollicitudin eget lacus. Quisque sit amet congue velit, in aliquet ante. Donec volutpat eu mi malesuada fermentum. Vivamus id augue sapien. Fusce rutrum, diam vitae lacinia mollis, sem quam dictum arcu, eu fermentum quam diam sit amet ex. In sed placerat quam, et euismod neque. Ut at mattis sapien. Vivamus tincidunt molestie lobortis.</string>
    <string name="solution_title">Solution:</string>
    <string name="diseases_can_we_scan">Diseases we can scan</string>
    <string name="corn_diseases">Corn diseases</string>
    <string name="tomato_diseases">Tomato diseases</string>
    <string name="information">Information</string>

    <string name="Corn">Gray leaf spot is the number one disease in all corn production. The fungus survives the winter on residue from the prior corn crop, providing a primary source of the inoculum, particularly when growers plant continuous corn or use a no-till soybean/corn rotation. Spores from the fungus are splashed onto the lower leaves early in the season. When these resulting infections produce spores, the inoculum can be carried by air currents higher into the canopy or into neighboring fields. Mature lesions from gray leaf spots are rectangular, as they are restricted by the leaf veins.</string>
    <string name="scan_the_plant">Scan the plant</string>
    <string name="tomato_bacterial_spot">- Tomato Bacterial Spot</string>
    <string name="tomato_early_blight">- Tomato Early Blight</string>
    <string name="tomato_leaf_mold">- Tomato Leaf Mold</string>
    <string name="tomato_septoria_leaf_spot">- Tomato Septoria Leaf Spot</string>
    <string name="tomato_target_spot">- Tomato Target Spot</string>
    <string name="tomato_mosaic_virus">- Tomato Mosaic Virus</string>
    <string name="tomato_yellow_leaf_curl">- Tomato Yellow Leaf Curl</string>
    <string name="corn_gray_leaf_spot">- Corn Gray Leaf Spot</string>
    <string name="corn_common_rust">- Corn Common Rust</string>
    <string name="corn_northern_leaf_blight">- Corn Northern Leaf Blight</string>
</resources>